--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,20 @@
 [tool.poetry]
 name = "sageai"
-version = "0.1.3"
+version = "1.0.0"
 description = "File-based functions for ChatGPT's function calling with Pydantic support"
-authors = ["Samanimkr <Samanimkr@outlook.com>"]
+authors = ["JUNIORCO <sami@lasso.gg>", "Samanimkr <Samanimkr@outlook.com>"]
 license = "MIT"
 readme = "README.md"
-keywords = ["python", "openai", "functions", "chatgpt", "gpt4", "genai"]
+keywords = ["python", "openai", "functions", "chatgpt", "gpt4", "genai", "function-calling"]
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.12"
 pydantic = ">=1.6,<=1.10.12"
-openai = "^0.28.1"
-numpy = "^1.26.0"
-black = "^23.9.1"
-qdrant-client = "^1.5.4"
+openai = ">=0.27.0"
+qdrant-client = ">=1.4.0"
 
+[tool.poetry.group.dev.dependencies]
+black = "^23.9.1"
 
 [build-system]
 requires = ["poetry-core"]
