--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,10 @@ qdrant-client = ">=1.4.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.9.1"
+isort = "^5.12.0"
+
+[tool.isort]
+profile = "black"
 
 [build-system]
 requires = ["poetry-core"]
